# app/Http/API/routes.php
@@ -3,6 +3,7 @@
 use App\Http\API\Controllers\AuthController;
 use App\Http\API\Controllers\CityController;
 use App\Http\API\Controllers\ListingController;
+use App\Http\API\Controllers\ResortController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -18,6 +19,7 @@ Route::prefix('auth')->group(function () {
 
 Route::middleware('auth:sanctum')->group(function () {
     Route::get('cities', [CityController::class, 'index'])->name('cities.index');
+    Route::get('resorts', [ResortController::class, 'index'])->name('resorts.index');
     Route::apiResource('listings', ListingController::class);
 
     Route::get('/user', function (Request $request) {
